# waken-voice

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_microphone.py  test_output.py  test_source.py  test_synthesizers.py  test_transcribers.py  test_util.py  test_wakeword.py
waken_voice/: __init__.py  microphone.py  output.py  source.py  synthesizers.py  transcribers.py  util.py  wakeword.py
