[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waken-voice"
version = "0.1.0"
description = "Voice Source/Output for Waken — file-drop speech-to-text in, text-to-speech out, via OpenAI's audio API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Waken contributors" }]
keywords = ["ai", "agents", "voice", "speech", "waken"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "waken>=0.1.1",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/WakenHQ/waken-voice"
Repository = "https://github.com/WakenHQ/waken-voice"
Issues = "https://github.com/WakenHQ/waken-voice/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["waken_voice"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["waken_voice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
