[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waken-voice"
version = "0.2.0"
description = "Voice Source/Output for Waken — file-drop speech-to-text in, text-to-speech out, via pluggable providers (OpenAI, Groq, gTTS)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Waken contributors" }]
keywords = ["ai", "agents", "voice", "speech", "waken"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "waken>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/WakenHQ/waken-voice"
Repository = "https://github.com/WakenHQ/waken-voice"
Issues = "https://github.com/WakenHQ/waken-voice/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
groq = ["groq>=0.11.0"]
gtts = ["gtts>=2.5.0"]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "openai>=1.0.0",
    "groq>=0.11.0",
    "gtts>=2.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["waken_voice"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["waken_voice"]

[[tool.mypy.overrides]]
# gTTS ships no type stubs or py.typed marker; only touched inside
# GTTSSynthesizer's lazy import, isolated from the rest of the package.
module = "gtts.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
