[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waken-voice"
version = "0.2.0"
description = "Voice Source/Output for Waken — file-drop and live-microphone speech-to-text in, text-to-speech out, via pluggable providers (OpenAI, Groq, gTTS, openWakeWord)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Waken contributors" }]
keywords = ["ai", "agents", "voice", "speech", "waken"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "waken>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/WakenHQ/waken-voice"
Repository = "https://github.com/WakenHQ/waken-voice"
Issues = "https://github.com/WakenHQ/waken-voice/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
groq = ["groq>=0.11.0"]
gtts = ["gtts>=2.5.0"]
# openwakeword itself is *not* listed here on purpose: it unconditionally
# depends on `tflite-runtime` on Linux, which has no published wheel for
# Python 3.12+, so pip would fail to resolve this extra at all. Install it
# separately with `pip install --no-deps openwakeword` (see the README) —
# these are its actual runtime dependencies, minus tflite-runtime, which
# `OpenWakeWordDetector` never needs since it defaults to the ONNX backend.
mic = [
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "onnxruntime>=1.10.0,<2",
    "tqdm>=4.0,<5.0",
    "scipy>=1.3,<2",
    "scikit-learn>=1,<2",
    "requests>=2.0,<3",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "openai>=1.0.0",
    "groq>=0.11.0",
    "gtts>=2.5.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "onnxruntime>=1.10.0,<2",
    "tqdm>=4.0,<5.0",
    "scipy>=1.3,<2",
    "scikit-learn>=1,<2",
    "requests>=2.0,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["waken_voice"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["waken_voice"]

[[tool.mypy.overrides]]
# gTTS ships no type stubs or py.typed marker; only touched inside
# GTTSSynthesizer's lazy import, isolated from the rest of the package.
module = "gtts.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# sounddevice and openwakeword ship no type stubs or py.typed marker;
# only touched inside MicrophoneSource/OpenWakeWordDetector's lazy imports.
module = ["sounddevice.*", "openwakeword.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
